<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">集群通(alpha)</string>
	<string name="app_version">版本</string>
	<string name="fail_to_telnumber">手机号码获取失败</string>
	<string name="no_simcard">无sim卡</string>
	<string name="unknown_state">未知sim状态</string>
	<string name="error_parse">解析服务器数据错误</string>
	<string name="netvork_connecttion_timeout">网络连接超时</string>
	<string name="account_not_exist">账号不存在，请联系管理员解决</string>
	<string name="wrong_password">账号密码错误，登录不成功</string>
	<string name="version_too_low">软件版本太低，登陆不成功</string>
	<string name="logged_in_another_place">警告：此账号已在别处登录</string>
	<string name="service_unavailable">登陆不成功，服务暂时不可用</string>
	<string name="pstn_name">电话</string>
	<string name="sip_name">集群通，当可用时</string>
	<string name="about">\n版本 ${VERSION}\n</string>
	<string name="auto_enabled">自动应答/扬声器</string>
	<string name="auto_disabled">自动应答关闭</string>
	<string name="hint">SIP地址</string>
	<string name="hint2">电话号码</string>
	<string name="notfast">无适用的网络</string>
	<string name="settings_account">SIP账户设置</string>
	<string name="settings_username">认证用户名</string>
	<string name="settings_line">Line</string>
	<string name="settings_password">密码</string>
	<string name="settings_server">服务器</string>
	<string name="settings_domain">域</string>
	<string name="settings_domain2">如与服务器相同请留空</string>
	<string name="settings_username1">用户名/Caller ID</string>
	<string name="settings_callerid2">如与认证用户名一致请留空</string>
	<string name="settings_port">端口</string>
	<string name="temp_group_call_name">临时对讲名称</string>
	<string name="temp_group_call">临时对讲</string>
	<string name="press_and_speak">按住讲话</string>
	<string name="make_temp_group_call">发起临时对讲</string>
	<string name="ptt_grp">临时对讲</string>
	<string name="input_tmpgrp_tip">请输入临时对讲名称</string>
	<string name="temp_group_creating">临时对讲创建中...</string>
	<string name="temp_group_timeout">临时对讲超时</string>
	<string name="temp_group_invite">邀请您加入临时对讲  </string>
	<string name="tmpgrpcall_refused_tip">对方无法接通，请稍后再试</string>
	<string name="settings_vquality">视频质量</string>
	<string name="settings_protocol">协议</string>
	<string name="settings_stun">使用STUN服务器</string>
	<string name="settings_stun_server">STUN服务器地址</string>
	<string name="settings_stun_server_port">STUN服务器端口</string>
	<string name="settings_mmtel">使用MMTel技术</string>
	<string name="settings_mmtel_qvalue">Q值</string>
	<string name="settings_options">通话选项</string>
	<string name="settings_wlan">使用Wi-Fi网络</string>
	<string name="settings_3g">使用3G网络</string>
	<string name="settings_edge">使用EDGE网络</string>
	<string name="settings_vpn">使用VPN</string>
	<string name="settings_check">请确认你的运营商是否允许VoIP电话</string>
	<string name="settings_vpn2">PBXes提供免费VPN服务，请进入www.pbxes.com并点击HELP获取相关信息。</string>
	<string name="dialog_default">集群通现在不是默认的电话程序，是否要将其设置为默认？
\n
\n如果你选择了 \'否\'，你仍然可以在拨号时在电话号码后加上字符\'+\'，或长按联系人选择 \'发送短信\'以强制使用集群通拨号。</string>
	<string name="dialog_message">是否查看集群通 1.5的视频介绍？</string>
	<string name="no">否</string>
	<string name="dontask">不再提示</string>
	<string name="settings_pref">集群通优先级</string>
	<string name="settings_pref2">在拨号时在电话号码后加上字符\'+\'，或长按联系人选择 \'发送短信\'以强制使用集群通拨号。</string>
	<string name="settings_compression">语音压缩</string>
	<string name="settings_auto_on">开启自动应答</string>
	<string name="settings_auto_on2">振动提醒，仅用于非锁定状态下</string>
	<string name="settings_auto_ondemand">快速切换自动应答</string>
	<string name="settings_auto_ondemand2">在状态栏显示切换按钮</string>
	<string name="settings_auto_headset">耳机插入时自动应答</string>
	<string name="settings_auto_headset2">当耳机插入时开启自动应答</string>
	<string name="settings_callrecord">通话记录</string>
	<string name="settings_callrecord2">保存通话记录到SD卡</string>
	<string name="settings_notifications">通知设置</string>
	<string name="settings_MWI">语音留言</string>
	<string name="settings_MWI2">自动检查是否有未读的语音留言</string>
	<string name="settings_reg">登录</string>
	<string name="settings_reg2">允许选择SIP帐户</string>
	<string name="settings_notify">未接电话</string>
	<string name="settings_notify2">使用蓝色LED灯提醒</string>
	<string name="settings_nodata">无数据</string>
	<string name="settings_nodata2">使用单音调指示数据包丢失</string>
	<string name="settings_advanced_options">高级设置</string>
	<string name="settings_av_options">音频/视频设置</string>
	<string name="settings_search">查找和替换</string>
	<string name="settings_excludepat">排除的正则表达式</string>
	<string name="settings_sipringtone">SIP铃声</string>
	<string name="settings_sipringtone2">设置SIP拨入电话的铃声</string>
	<string name="settings_sipringtone_dialog">铃声</string>
	<string name="settings_eargain">听筒音量</string>
	<string name="settings_micgain">麦克风音量</string>
	<string name="settings_heargain">耳机音量</string>
	<string name="settings_hmicgain">耳机麦克风音量</string>
	<string name="settings_pbxes_options">PBXes设置</string>
	<string name="settings_par">多个拨出电话</string>
	<string name="settings_par2">允许同时拨打多个电话</string>
	<string name="settings_improve">音质优化</string>
	<string name="settings_posurl">地理位置及回拨URL地址</string>
	<string name="settings_pos2">地址可被通报至PBXes的联系人(需要PBXes.com的Premium账户)</string>
	<string name="settings_callback">触发回拨</string>
	<string name="settings_callback2">如没有合适的网络时</string>
	<string name="settings_callthru">触发Callthru</string>
	<string name="settings_callthru2">Callthru前缀</string>
	<string name="settings_title">集群通设置</string>
	<string name="settings_profile_title">集群通设置 (<xliff:g id="profile">%s</xliff:g>)</string>
	<string name="settings_profile_menu_import">导入</string>
	<string name="settings_profile_menu_export">导出</string>
	<string name="settings_profile_menu_delete">删除</string>
	<string name="settings_profile_dialog_profiles_title">用户配置</string>
	<string name="settings_profile_dialog_delete_title">删除用户配置</string>
	<string name="settings_profile_dialog_delete_text">确认要删除用户<xliff:g id="profile">%s</xliff:g>的配置吗?</string>
	<string name="settings_profile_export_error">导出用户配置失败！</string>
	<string name="settings_profile_import_error">导入用户配置失败！</string>
	<string name="settings_profile_delete_error">删除用户配置失败！</string>
	<string name="settings_profile_delete_confirmation">成功删除用户配置。</string>
	<string name="settings_wireless_options">Wi-Fi设置</string>
	<string name="settings_bluetooth">需要Android 2.2或更高</string>
	<string name="settings_keepon">屏幕常亮</string>
	<string name="settings_keepon2">一些设备需要选择此项以保持Wi-Fi连接</string>
	<string name="settings_selectwifi">选择Wi-Fi热点</string>
	<string name="settings_selectwifi2">根据信号选择热点</string>
	<string name="settings_ownwifi">Wi-Fi电力控制</string>
	<string name="settings_ownwifi2">节约电力</string>
	<string name="menu_settings">设置</string>
	<string name="menu_exit">退出</string>
	<string name="menu_about">关于</string>
	<string name="menu_dtmf">发送DTMF</string>
	<string name="menu_video">发送视频</string>
	<string name="menu_call">呼叫</string>
	<string name="menu_mute">静音</string>
	<string name="menu_hold">保持</string>
	<string name="menu_transfer">转移</string>
	<string name="menu_speaker">扬声器</string>
	<string name="menu_endCall">挂断</string>
	<string name="menu_answer">应答</string>
	<string name="menu_bluetooth">蓝牙(实验功能)</string>
	<string name="transfer_title">将通话转移至</string>
	<string name="unknown">未知</string>
	<string name="slide_hint_down_to_end_call">向下滑动以结束通话</string>
	<string name="slide_hint_up_to_answer">向上滑动以接通来电</string>
	<string name="ongoing">当前通话</string>
	<string name="onHold">已保持</string>
	<string name="codecs">音频解编码器</string>
	<string name="codecs_summary">设置要使用的音频解编码器及其优先级</string>
	<string name="codecs_move">移动解编码器</string>
	<string name="help_speakerphone">按住音量键以强制通话</string>
	<string name="menu_register">Register VideoSMS feature</string>
	<string name="privatecall_default_dialog">Please enter the call number:</string>
	<string name="msg_num">Number</string>
	<string name="group_call">对讲</string>
	<string name="single_call">视频</string>
	<string name="current_group">当前组:</string>
	<string name="group_status">组状态:</string>
	<string name="spokesman">讲话人:</string>
	<string name="switch_group_1">切换组</string>
	<string name="member_list_1">成员列表</string>
	<string name="about_info">关于</string>
	<string name="group_choose">请选择组:</string>
	<string name="member_name">成员名称</string>
	<string name="member_number">电话</string>
	<string name="member_status">状态</string>
	<string name="menu_add">添加</string>
	<string name="menu_delete">删除</string>
	<string name="menu_modify">修改</string>
	<string name="toast_choose_member">请先选择您要呼叫的号码。</string>
	<string name="add_contact_1">添加联系人</string>
	<string name="contact_name">姓名:</string>
	<string name="contact_number">电话:</string>
	<string name="menu_ok">切换</string>
	<string name="menu_cancel">忽略</string>
	<string name="modify_contact">修改联系人信息</string>
	<string name="menu_clear_log">清空记录</string>
	<string name="hint_to">收件人:</string>
	<string name="hint_content">内容:</string>
	<string name="status_close">关闭</string>
	<string name="status_free">空闲</string>
	<string name="status_speaking">讲话</string>
	<string name="status_listening">听讲</string>
	<string name="status_waiting">排队</string>
	<string name="status_error">未知状态</string>
	<string name="none_speaker">无</string>
	<string name="self_speaker">(自己)</string>
	<string name="toast_null_contact">收件人不能为空！</string>
	<string name="toast_null_content">信息内容不能为空！</string>
	<string name="toast_message_sent_fail">信息发送失败！</string>
	<string name="hint_message_history">当前无任何消息记录。</string>
	<string name="settings_group_call">对讲设置</string>
	<string name="settings_high_priority">高优先级</string>
	<string name="settings_same_priority">相同优先级</string>
	<string name="settings_low_priority">低优先级</string>
	<string name="settings_auto_run_title">开机自动运行</string>
	<string name="settings_auto_run_summary">是否开机自动运行</string>
	<string name="settings_gps_notify_title">GPS 信息提示</string>
	<string name="settings_gps_notify_summary">是否开启GPS信息提示</string>
	<string name="notification_new_message">新短消息</string>
	<string name="call_voicecalling">voice call</string>
	<string name="call_videocome">videocome...</string>
	<string name="call_voicecome">voicecome...</string>
	<string name="call_calling">video calling...</string>
	<string name="call_videocalling">video call</string>
	<string name="groupstate">组名：</string>
	<string name="msg_send">发送信息</string>
	<string name="msg_msghistory">信息记录</string>
	<string name="cameracall_screen">full screen</string>
	<string name="cameracall_holdon">hold on</string>
	<string name="msg_book">联系人</string>
	<string name="makecall">呼叫</string>
	<string name="contactor">联系人</string>
	<string name="contact_history">通话记录</string>
	<string name="notify_group_call">有呼叫，是否切换组？</string>
	<string name="video_720">720P(1280*720)</string>
	<string name="video_d1">D1(704*576)</string>
	<string name="video_cif">QVGA(320*240)</string>
	<string name="video_qcif">QCIF(176*144)</string>
	<string name="video_relvga">VGA(640*480)</string>
	<string name="message">短消息</string>
	<string name="name">姓名</string>
	<string name="save">保存</string>
	<string name="back">返回</string>
	<string name="carmera_name">摄像头</string>
	<string name="setting_carmar_1">前置</string>
	<string name="setting_carmar_2">后置</string>
	<string name="rate_suspension_video">视频</string>
	<string name="rate_suspension_voice">语音</string>
	<string name="cameracall_usepix">摄像头分辨率</string>
	<string name="allow_lost_level">丢包容忍级别</string>
	<string name="iframe">I帧间隔</string>
	<string name="frame_rate">帧率</string>
	<string name="rate">码率</string>
	<string name="screen_type">屏幕方向</string>
	<string name="rotate">旋转</string>
	<string name="ver">竖屏</string>
	<string name="hor">横屏</string>
	<string name="color_correct">色彩校正</string>
	<string name="fullscreen_lable">全屏</string>
	<string name="user_mms">用户详情</string>
	<string name="user_number">号码:</string>
	<string name="position">职位:</string>
	<string name="sex">性别:</string>
	<string name="department">部门:</string>
	<string name="phone">手机号码:</string>
	<string name="terminal">终端类型:</string>
	<string name="function">套餐功能:</string>
	<string name="pttmap">地图对讲</string>
	<string name="gps">定位上报</string>
	<string name="pictureupload">图片拍传</string>
</resources>