<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/tab_wihte"
              android:gravity="center_horizontal"
              android:orientation="vertical">

	<LinearLayout
		android:id="@id/li_photo"
		android:layout_width="fill_parent"
		android:layout_height="50.0dip"
		android:layout_gravity="top"
		android:background="@color/whole_bg"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:id="@id/btn_home_user"
			android:layout_width="wrap_content"
			android:layout_height="52.0dip"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:background="@color/font_color4"
			android:orientation="horizontal">

			<TextView
				android:id="@id/left_photo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="2.0dip"
				android:layout_marginRight="5.0dip"
				android:background="@drawable/map_back_release"/>

			<TextView
				android:id="@id/photo_sent_home"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:gravity="center"
				android:paddingRight="15.0dip"
				android:text="@string/back"
				android:textColor="@color/font_color3"
				android:textSize="15.0sp"/>
		</LinearLayout>

		<TextView
			android:id="@id/search_edittext"
			android:layout_width="0.0dip"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8.0dip"
			android:layout_marginRight="8.0dip"
			android:layout_weight="1.0"
			android:gravity="center"
			android:text="@string/user_mms"
			android:textColor="@color/font_color3"
			android:textSize="20.0sp"/>

		<ImageView
			android:id="@id/keyboard_img"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="15.0dip"
			android:paddingRight="15.0dip"
			android:src="@drawable/transfer_list_icon_selector"
			android:visibility="invisible"/>
	</LinearLayout>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbars="vertical">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center_horizontal"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/name"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="1"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/user_number"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_number"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="1"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/position"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_position"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="2"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/sex"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_sex"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="3"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/department"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_department"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="4"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10.0dip"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/phone"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_phone"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="5"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<View
				android:layout_width="fill_parent"
				android:layout_height="0.5dip"
				android:background="#ffeeeeee"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:id="@id/user_dtype"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/terminal"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_terminal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="6"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10.0dip"
				android:layout_marginTop="15.0dip"
				android:orientation="horizontal">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:gravity="left"
					android:text="@string/function"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_function"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="2.0"
					android:text="7"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="45.0dip"
				android:orientation="horizontal">

				<TextView
					android:id="@id/user_video"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="@string/rate_suspension_video"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_audio"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="@string/rate_suspension_voice"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_pttmap"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="@string/pttmap"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="45.0dip"
				android:orientation="horizontal">

				<TextView
					android:id="@id/user_gps"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="@string/gps"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_pictureupload"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="@string/pictureupload"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>

				<TextView
					android:id="@id/user_smsswitch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:text="@string/message"
					android:textColor="@color/font_color3"
					android:textSize="20.0sp"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

